Quick 'Paid Today' icon

--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -143,7 +143,7 @@
 								<% @client.invoices.each do |invoice| %>
 								<tr id="invoicerow<%= invoice.id %>">
 									<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
-									<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><i class="fa fa-files-o"></i><% end %></td>
+									<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><i class="fa fa-files-o"></i><% end %><% if !invoice.paid? %><%= link_to mark_paid_invoice_path(invoice), title: 'Paid Today?', class: 'paid-today-btn paid-today-link', remote: true do %><i class="fa fa-check-square-o right"></i><% end %><% end %></td>
 									<td><%= invoice.display_id %></td>
 									<td class="text-center hidden-xs"><%= invoice.worktype %></td>
 									<td class="currency text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
