--- a/app/assets/stylesheets/partials/_variables.scss
+++ b/app/assets/stylesheets/partials/_variables.scss
@@ -4,6 +4,7 @@ $white-off: #f6f6f6;
 $grey: #333;
 $green: #5cb85c;
 $red: #d9534f;
+$orange: #f0ad4e;
 $purple: #8a22ff;
 
 $brand-danger-alt: #9c5553;
