--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -20,6 +20,7 @@
 							<thead>
 								<tr>
 									<th>Client</th>
+									<th>&nbsp;</th>
 									<th class="hidden-xs">Contact</th>
 									<th>Hourly</th>
 									<th class="text-right hidden-xs">Unpaid</th>
@@ -30,6 +31,7 @@
 								<% @clients.sort { |a,b| a.name <=> b.name }.each do |client| %>
 								<tr id="clientrow<%= client.id %>">
 									<td><%= link_to client do %><%= client.name %><% end %></td>
+									<td><%= link_to new_invoice_path(:client_id => client.id), :class => 'new-invoice-link' do %><i class="fa fa-usd"></i><% end %><%= link_to new_project_path(:client_id => client.id), :class => 'new-project-link' do %><i class="fa fa-folder-open-o right"></i><% end %></td>
 									<td class="hidden-xs"><%= client.contact %></td>
 									<td><% if client.currentrate %><%= number_to_currency(client.currentrate) %><% else %>&mdash;<% end %></td>
 									<td class="currency text-right hidden-xs"><% if client.unpaidTotal > 0 %><span class="spread red"><%= number_to_currency(client.unpaidTotal, { :negative_format => '(%n)' }) %></span><% else %>&mdash;<% end %></td>
