--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -39,6 +39,7 @@
 		<div class="row">
 			<div class="col-sm-8">
 				<h3>Invoices</h3>
+				<p><%= link_to new_invoice_path(:client_id => @project.client.id, :project_id => @project.id), :class => 'btn btn-success btn-sm' do %><i class="fa fa-plus left"></i>New Invoice<% end %></p>
 				<% if @project.invoices.blank? %>
 				<p class="lead">No invoices.</p>
 				<% else %>
