Fixed payment type population

--- a/app/views/invoices/_form.html.erb
+++ b/app/views/invoices/_form.html.erb
@@ -93,7 +93,7 @@
 		<div class="col-lg-2 col-sm-6">
 			<div class="form-group">
 				<%= f.label :paymenttype, 'Payment Type' %>
-				<%= select(:invoice, 'paymenttype', payment_types, { :include_blank => 'None' }, { :class => 'form-control' }) %>
+				<%= select(:invoice, 'paymenttype', payment_types, { :include_blank => 'None', :selected => @copied_invoice ? @copied_invoice.paymenttype : (params[:client_id].present? ? Client.find(params[:client_id]).preferred_paymenttype : '') }, { :class => 'form-control' }) %>
 			</div>
 		</div>
 	</div>
