--- a/app/views/lines/_line.html.erb
+++ b/app/views/lines/_line.html.erb
@@ -1,6 +1,6 @@
 <tr>
 	<% if user_signed_in? %>
-	<td><%= link_to [line.invoice, line], method: :delete, data: { confirm: 'Are you sure?' } do %><i class="fa fa-trash-o red"></i><% end %></td>
+	<td><%= link_to [line.invoice, line], method: :delete, data: { confirm: 'Are you sure?' } do %><%= icon('fas', 'trash-alt', class: 'red') %><% end %></td>
 	<% end %>
   <td><%= line.description %></td>
   <% if line.hours.present? %>
