--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -7,30 +7,30 @@
 					<div class="col-md-4 col-sm-6">
             <div class="row">
               <div class="col-xs-10">
-                <%= link_to clients_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><i class="fa fa-address-book-o left"></i>Clients<% end %>
+                <%= link_to clients_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><%= icon('fas', 'address-book', class: 'left') %>Clients<% end %>
               </div>
               <div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_client_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+                <%= link_to new_client_path, { :class => 'btn btn-block btn-lg btn-warning' } do %><%= icon('fas', 'plus') %><% end %>
               </div>
             </div>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
-								<%= link_to projects_path, { :class => 'btn btn-block btn-lg btn-info' } do %><i class="fa fa-folder-open-o left"></i>Projects<% end %>
+								<%= link_to projects_path, { :class => 'btn btn-block btn-lg btn-info' } do %><%= icon('far', 'folder-open', class: 'left') %>Projects<% end %>
 							</div>
 							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_project_path, { :class => 'btn btn-block btn-lg btn-info' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+                <%= link_to new_project_path, { :class => 'btn btn-block btn-lg btn-info' } do %><%= icon('fas', 'plus') %><% end %>
               </div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
-								<%= link_to invoices_path, { :class => 'btn btn-block btn-lg btn-success' } do %><i class="fa fa-usd left"></i>Invoices<% end %>
+								<%= link_to invoices_path, { :class => 'btn btn-block btn-lg btn-success' } do %><%= icon('fas', 'dollar-sign', class: 'left') %>Invoices<% end %>
 							</div>
 							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_invoice_path, { :class => 'btn btn-block btn-lg btn-success' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+                <%= link_to new_invoice_path, { :class => 'btn btn-block btn-lg btn-success' } do %><%= icon('fas', 'plus') %><% end %>
               </div>
 						</div>
 					</div>
@@ -38,30 +38,30 @@
 					<div class="col-md-4 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
-								<%= link_to goals_path, { :class => 'btn btn-block btn-lg btn-primary' } do %><i class="fa fa-tasks left"></i>Goals<% end %>
+								<%= link_to goals_path, { :class => 'btn btn-block btn-lg btn-primary' } do %><%= icon('fas', 'tasks', class: 'left') %>Goals<% end %>
 							</div>
 							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_goal_path, { :class => 'btn btn-block btn-lg btn-primary' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+                <%= link_to new_goal_path, { :class => 'btn btn-block btn-lg btn-primary' } do %><%= icon('fas', 'plus') %><% end %>
               </div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
-								<%= link_to vendors_path, { :class => 'btn btn-block btn-lg btn-danger-alt' } do %><i class="fa fa-users left"></i>Vendors<% end %>
+								<%= link_to vendors_path, { :class => 'btn btn-block btn-lg btn-danger-alt' } do %><%= icon('fas', 'users', class: 'left') %>Vendors<% end %>
 							</div>
 							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_vendor_path, { :class => 'btn btn-block btn-lg btn-danger-alt' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+                <%= link_to new_vendor_path, { :class => 'btn btn-block btn-lg btn-danger-alt' } do %><%= icon('fas', 'plus') %><% end %>
               </div>
 						</div>
 					</div>
 					<div class="col-md-4 col-sm-6">
 						<div class="row">
               <div class="col-xs-10">
-								<%= link_to expenses_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><i class="fa fa-credit-card left"></i>Expenses<% end %>
+								<%= link_to expenses_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><%= icon('far', 'credit-card', class: 'left') %>Expenses<% end %>
 							</div>
 							<div class="col-xs-2 button-wrap-nopad">
-                <%= link_to new_expense_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><i class="fa fa-fw fa-plus"></i><% end %>
+                <%= link_to new_expense_path, { :class => 'btn btn-block btn-lg btn-danger' } do %><%= icon('fas', 'plus') %><% end %>
               </div>
 						</div>
 					</div>
