--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,4 +1,6 @@
 @import "bootstrap-sprockets";
+@import "font-awesome-sprockets";
+@import "font-awesome";
 @import "partials/variables";
 @import "bootstrap";
 @import "partials/global";
