--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -10,7 +10,7 @@
 				<% else %>
 				<p><%= link_to 'Inactive Clients', clients_path(:inactive => 'true') %></p>
 				<% end %>
-				<p><%= link_to new_client_path, { :class => 'btn btn-success' } do %><i class="fa fa-plus left"></i>New Client<% end %></p>
+				<p><%= link_to new_client_path, { :class => 'btn btn-success' } do %><%= icon('fas', 'plus', class: 'left') %>New Client<% end %></p>
 				<% if @clients.blank? %>
 				<p class="lead">No clients.</p>
 				<% else %>
@@ -31,7 +31,7 @@
 								<% @clients.sort { |a,b| a.name <=> b.name }.each do |client| %>
 								<tr id="clientrow<%= client.id %>">
 									<td><%= link_to client do %><%= client.name %><% end %></td>
-									<td><%= link_to new_invoice_path(:client_id => client.id), :class => 'new-invoice-link' do %><i class="fa fa-usd"></i><% end %><%= link_to new_project_path(:client_id => client.id), :class => 'new-project-link' do %><i class="fa fa-folder-open-o right"></i><% end %></td>
+									<td><%= link_to new_invoice_path(:client_id => client.id), :class => 'new-invoice-link' do %><%= icon('fas', 'dollar-sign') %><% end %><%= link_to new_project_path(:client_id => client.id), :class => 'new-project-link' do %><%= icon('far', 'folder-open', class: 'right') %><% end %></td>
 									<td class="hidden-xs"><%= client.contact %></td>
 									<td><% if client.currentrate %><%= number_to_currency(client.currentrate) %><% else %>&mdash;<% end %></td>
 									<td class="currency text-right hidden-xs"><% if client.unpaidTotal > 0 %><span class="spread red"><%= number_to_currency(client.unpaidTotal, { :negative_format => '(%n)' }) %></span><% else %>&mdash;<% end %></td>
