--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -8,8 +8,8 @@
 				<% end %>
 				<h1><%= @client.name %></h1>
 				<p class="doicons">
-					<%= link_to edit_client_path(@client), title: 'Edit' do %><i class="fa fa-fw fa-2x fa-pencil-square-o text-warning"></i><% end %>
-					<%= link_to client_path(@client), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Client ##{@client.id}?" } do %><i class="fa fa-fw fa-2x fa-trash-o text-danger"></i><% end %>
+					<%= link_to edit_client_path(@client), title: 'Edit' do %><%= icon_action_edit %><% end %>
+					<%= link_to client_path(@client), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Client ##{@client.id}?" } do %><%= icon_action_delete %><% end %>
 				</p>
 				<p>
 					<strong>Client ID:</strong>
@@ -44,7 +44,7 @@
 					<% end %>
 				<% end %>
 				<% if @client.international %>
-				<p><strong><i class="fa fa-globe left"></i>International Client</strong></p>
+				<p><strong><%= icon('fas', 'globe', class: 'left') %>International Client</strong></p>
 				<% end %>
 				<% if !@client.federalein.blank? %>
 				<p><strong>Federal EIN:</strong> <%= @client.federalein %></p>
@@ -65,7 +65,7 @@
 		<div class="row">
 			<div class="col-sm-6">
 				<h3>Projects</h3>
-				<p><%= link_to new_project_path(:client_id => @client.id), :class => 'btn btn-success btn-sm' do %><i class="fa fa-plus left"></i>New Project<% end %></p>
+				<p><%= link_to new_project_path(:client_id => @client.id), :class => 'btn btn-success btn-sm' do %><%= icon('fas', 'plus', class: 'left') %>New Project<% end %></p>
 				<% if @client.projects.blank? %>
 				<p class="lead">No projects.</p>
 				<% else %>
@@ -80,7 +80,7 @@
 						<% @client.projects.each do |project| %>
 						<tr id="projectrow<%= project.id %>">
 							<td><%= link_to project do %><%= project.name %><% end %></td>
-							<td class="text-center"><% if project.completed == true %><i class="fa fa-check green"></i><% else %><span class="spread red">No</span><% end %></td>
+							<td class="text-center"><% if project.completed == true %><%= icon('fas', 'check', class: 'green') %><% else %><span class="spread red">No</span><% end %></td>
 						</tr>
 						<% end %>
 					</tbody>
@@ -91,7 +91,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<h3>Invoices</h3>
-				<p><%= link_to new_invoice_path(:client_id => @client.id), :class => 'btn btn-success btn-sm' do %><i class="fa fa-plus left"></i>New Invoice<% end %></p>
+				<p><%= link_to new_invoice_path(:client_id => @client.id), :class => 'btn btn-success btn-sm' do %><%= icon('fas', 'plus', class: 'left') %>New Invoice<% end %></p>
 				<% if @client.invoices.blank? %>
 				<p class="lead">No invoices.</p>
 				<% else %>
@@ -145,7 +145,7 @@
 								<% @client.invoices.each do |invoice| %>
 								<tr id="invoicerow<%= invoice.id %>">
 									<td><%= link_to invoice do %><%= invoice.date %><% end %></td>
-									<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><i class="fa fa-files-o"></i><% end %><% if !invoice.paid? %><%= link_to mark_paid_invoice_path(invoice), title: 'Paid Today?', class: 'paid-today-btn paid-today-link', remote: true do %><i class="fa fa-check-square-o right"></i><% end %><% end %></td>
+									<td><%= link_to new_invoice_path(:copied_id => invoice.id), :class => 'copy-invoice-link' do %><%= icon('far', 'copy') %><% end %><% if !invoice.paid? %><%= link_to mark_paid_invoice_path(invoice), title: 'Paid Today?', class: 'paid-today-btn paid-today-link', remote: true do %><%= icon('fas', 'check-square', class: 'right') %><% end %><% end %></td>
 									<td><%= invoice.display_id %></td>
 									<td class="text-center hidden-xs"><%= invoice.worktype %></td>
 									<td class="currency text-right"><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
