--- a/app/views/expenses/bulk_new.html.erb
+++ b/app/views/expenses/bulk_new.html.erb
@@ -24,7 +24,7 @@
 						<div class="col-sm-3 col-lg-2">
 							<div class="form-group">
 								<div class="input-group">
-									<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+									<span class="input-group-addon"><%= icon('fas', 'calendar-alt') %></span>
 									<%= text_field_tag('date[]', Time.now.strftime("%Y-%m-%d"), { :required => true, :placeholder => 'YYYY-MM-DD', :class => 'form-control datepicker bulk-datepicker-input'}) %>
 								</div>
 							</div>
@@ -37,7 +37,7 @@
 						</div>
 						<div class="col-sm-2">
 							<div class="input-group">
-								<span class="input-group-addon"><i class="fa fa-usd"></i></span>
+								<span class="input-group-addon"><%= icon('fas', 'dollar-sign') %></span>
 								<%= number_field_tag('cost[]', nil, { :required => true, :placeholder => '0.00', :class => 'form-control', :step => '0.01' }) %>
 							</div>
 						</div>
@@ -48,7 +48,7 @@
 						</div>
 					</div>
 					<div class="form-group">
-				    <button type="submit" class="btn btn-success"><i class="fa fa-save left"></i>Save</button>
+				    <button type="submit" class="btn btn-success"><%= icon('far', 'save', class: 'left') %>Save</button>
 				  </div>
         <% end %>
 				<p><%= link_to 'Back', expenses_path %></p>
