--- a/app/views/expenses/show.html.erb
+++ b/app/views/expenses/show.html.erb
@@ -5,8 +5,8 @@
 			<div class="col-sm-12">
 				<h1>Expense #<%= @expense.id %></h1>
 				<p class="doicons">
-					<%= link_to edit_expense_path, title: 'Edit' do %><i class="fa fa-fw fa-2x fa-pencil-square-o text-warning"></i><% end %>
-					<%= link_to expense_path, title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Expense ##{@expense.id}?" } do %><i class="fa fa-fw fa-2x fa-trash-o text-danger"></i><% end %>
+					<%= link_to edit_expense_path, title: 'Edit' do %><%= icon_action_edit %><% end %>
+					<%= link_to expense_path, title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Expense ##{@expense.id}?" } do %><%= icon_action_delete %><% end %>
 				</p>
 				<p><strong>Name:</strong> <%= @expense.name %></p>
 				<p><strong>Vendor:</strong> <%= link_to @expense.vendor do %><%= @expense.vendor.name %><% end %></p>
