--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -16,7 +16,7 @@
 			<div class="form-group">
 				<%= f.label :startdate, 'Start Date' %>
 				<div class="input-group">
-					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+					<span class="input-group-addon"><%= icon('fas', 'calendar-alt') %></span>
 					<%= f.text_field :startdate, :placeholder => 'YYYY-MM-DD', class: 'form-control datepicker' %>
 				</div>
 			</div>
@@ -25,7 +25,7 @@
 			<div class="form-group">
 				<%= f.label :enddate, 'End Date' %>
 				<div class="input-group">
-					<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+					<span class="input-group-addon"><%= icon('fas', 'calendar-alt') %></span>
 					<%= f.text_field :enddate, :placeholder => 'YYYY-MM-DD', class: 'form-control datepicker' %>
 				</div>
 			</div>
@@ -40,7 +40,7 @@
 			<div class="form-group">
 				<%= f.label :amount %>
 				<div class="input-group">
-					<span class="input-group-addon"><i class="fa fa-usd"></i></span>
+					<span class="input-group-addon"><%= icon('fas', 'dollar-sign') %></span>
 					<%= f.text_field :amount, :placeholder => '0.00', class: 'form-control text-right' %>
 				</div>
 			</div>
@@ -57,7 +57,7 @@
   <div class="row">
 		<div class="col-sm-12">
 			<div class="form-group">
-				<button type="submit" class="btn btn-success"><i class="fa fa-save left"></i>Save</button>
+				<button type="submit" class="btn btn-success"><%= icon('far', 'save', class: 'left') %>Save</button>
 			</div>
 		</div>
 	</div>
