--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -13,10 +13,10 @@
 				<% if user_signed_in? %>
 				<h1>Invoice #<%= @invoice.id %></h1>
 				<p class="doicons">
-					<%= link_to invoice_path(:format => 'pdf'), title: 'PDF' do %><i class="fa fa-fw fa-2x fa-file text-success"></i><% end %>
-					<%= link_to edit_invoice_path(@invoice), title: 'Edit' do %><i class="fa fa-fw fa-2x fa-pencil-square-o text-warning"></i><% end %>
-					<%= link_to invoice_path(@invoice), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Invoice ##{@invoice.id}?" } do %><i class="fa fa-fw fa-2x fa-trash-o text-danger"></i><% end %>
-					<%= link_to email_invoice_path(@invoice), title: 'Send' do %><i class="fa fa-fw fa-2x fa-envelope text-success"></i><% end %>
+					<%= link_to invoice_path(:format => 'pdf'), title: 'PDF' do %><%= icon('fas', 'file', class: 'fa-fw fa-2x text-success') %><% end %>
+					<%= link_to edit_invoice_path(@invoice), title: 'Edit' do %><%= icon_action_edit %><% end %>
+					<%= link_to invoice_path(@invoice), title: 'Delete', method: :delete, data: { confirm: "Are you sure you would like to delete Invoice ##{@invoice.id}?" } do %><%= icon_action_delete %><% end %>
+					<%= link_to email_invoice_path(@invoice), title: 'Send' do %><%= icon('far', 'envelope-open', class: 'fa-fw fa-2x text-success') %><% end %>
 					<% if !@invoice.paid? %><%= link_to mark_paid_invoice_path(@invoice), id: 'paid-today-btn', title: 'Paid Today?', class: 'btn btn-sm btn-warning', remote: true do %>Paid Today?<% end %><% end %>
 				</p>
 				<% end %>
@@ -57,7 +57,7 @@
 				<% if @invoice.paid == false %>
 				<p>
 					<strong>Paid?:</strong>
-					<% if @invoice.paid == true %><i class="fa fa-check green"></i><% else %><span class="spread red">Not Paid</span><% end %>
+					<% if @invoice.paid == true %><%= icon('fas', 'check', class: 'green') %><% else %><span class="spread red">Not Paid</span><% end %>
 				</p>
 				<% else %>
 				<p>
