--- a/app/views/lines/_form.html.erb
+++ b/app/views/lines/_form.html.erb
@@ -10,7 +10,7 @@
       <div class="col-md-2">
       	<div class="form-group">
       		<div class="input-group">
-    				<span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
+    				<span class="input-group-addon"><%= icon('far', 'clock') %></span>
     				<%= f.text_field :hours, :placeholder => 'Hours', class: 'form-control text-center' %>
     			</div>
       	</div>
@@ -18,7 +18,7 @@
       <div class="col-md-2">
       	<div class="form-group">
       		<div class="input-group">
-    				<span class="input-group-addon"><i class="fa fa-usd"></i></span>
+    				<span class="input-group-addon"><%= icon('fas', 'dollar-sign') %></span>
     				<%= f.text_field :rate, :placeholder => @ratePlaceholder, class: 'form-control text-center' %>
     			</div>
       	</div>
@@ -26,7 +26,7 @@
       <div class="col-md-2">
         <div class="form-group">
         	<div class="input-group">
-    				<span class="input-group-addon"><i class="fa fa-usd"></i></span>
+    				<span class="input-group-addon"><%= icon('fas', 'dollar-sign') %></span>
     				<%= f.text_field :total, :required => true, :placeholder => 'Total', class: 'form-control text-center' %>
     			</div>
         </div>
@@ -39,7 +39,7 @@
   </div>
   <div class="col-md-2">
   	<div class="form-group">
-    	<button type="submit" class="btn btn-success btn-block"><i class="fa fa-save left"></i>Create</button>
+    	<button type="submit" class="btn btn-success btn-block"><%= icon('far', 'save', class: 'left') %>Create</button>
   	</div>
   </div>
   <%= hidden_field(:comment, :hourly) %>
