--- a/app/views/years/_form.html.erb
+++ b/app/views/years/_form.html.erb
@@ -25,6 +25,6 @@
 	</div>
 	<hr>
 	<div class="form-group">
-		<button type="submit" class="btn btn-success"><i class="fa fa-save left"></i>Save</button>
+		<button type="submit" class="btn btn-success"><%= icon('far', 'save', class: 'left') %>Save</button>
 	</div>
 <% end %>
