--- a/app/views/years/index.html.erb
+++ b/app/views/years/index.html.erb
@@ -5,7 +5,7 @@
 			<div class="col-sm-12">
 				<h1>Years</h1>
 				<p><%= link_to 'Home', root_path %></p>
-				<p><%= link_to new_year_path, { :class => 'btn btn-success' } do %><i class="fa fa-plus left"></i>New Year<% end %></p>
+				<p><%= link_to new_year_path, { :class => 'btn btn-success' } do %><%= icon('fas', 'plus', class: 'left') %>New Year<% end %></p>
 				<% if @years.blank? %>
 				<p class="lead">No years.</p>
 				<% else %>
