--- a/app/views/years/show.html.erb
+++ b/app/views/years/show.html.erb
@@ -105,7 +105,7 @@
 									<td><%= invoice.paiddate %></td>
 									<td class="text-center hidden-xs"><%= invoice.worktype %></td>
 									<td class="currency text-right"><% if invoice.hasDiscount %>^<% end %><% if invoice.cost %><%= number_to_currency(invoice.cost, { :negative_format => '(%n)' }) %><% else %>&mdash;<% end %></td>
-									<td class="text-center"><% if invoice.paid == true %><i class="fa fa-check green"></i><% else %><span class="spread red">Not Paid</span><% end %></td>
+									<td class="text-center"><% if invoice.paid == true %><%= icon('fas', 'check', class: 'green') %><% else %><span class="spread red">Not Paid</span><% end %></td>
 								</tr>
 								<% end %>
 							</tbody>
