--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1,5 +1,5 @@
 @import "bootstrap-sprockets";
-//@import "font-awesome-sprockets"; // scss commented out and script included in application.html.erb because font files aren't coming through in production
+//@import "font-awesome-sprockets"; // scss commented out and stylesheet included in application.html.erb because font files aren't coming through in production
 //@import "font-awesome";
 @import "partials/variables";
 @import "bootstrap";
