--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,10 @@
   <link rel="apple-touch-icon-precomposed" href="<%= company[:logo][:favicon] %>">
   <link rel="shortcut icon" href="<%= company[:logo][:favicon] %>">
   <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=PT+Mono' %>
+  <%= stylesheet_link_tag 'https://use.fontawesome.com/releases/v5.0.6/css/all.css' %>
+  <% # stylesheet included and scss commented out in style.css.scss because font files aren't coming through in production %>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'https://www.google.com/jsapi' %>
-  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-  <% # script included and scss commented out in style.css.scss because font files aren't coming through in production %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 </head>
 <body>
