--- a/app/assets/stylesheets/partials/_global.scss
+++ b/app/assets/stylesheets/partials/_global.scss
@@ -271,12 +271,18 @@ footer {
   margin-bottom: 2rem;
 	text-align: center;
 
-  img {
-		display: block;
-		margin: 1rem auto;
-    max-width: 200px;
-		max-height: 35px;
-  }
+	.payment-images {
+
+		margin-top: 1rem;
+
+		img {
+			display: inline-block;
+			margin: 2rem 2rem;
+			max-width: 200px;
+			max-height: 75px;
+		}
+
+	}
 
 	.stripe-button-el {
 		margin-top: 2rem;
