Create payment summary page

--- a/app/assets/stylesheets/partials/_global.scss
+++ b/app/assets/stylesheets/partials/_global.scss
@@ -306,6 +306,16 @@ footer {
 
 }
 
+.payment-summary-page {
+
+	padding: 4rem 0px;
+
+	.payment-summary-intro {
+		text-align: center;
+	}
+
+}
+
 @media all and (min-width: 768px) {
 
 	.vendors-category-view {
