--- a/app/views/welcome/payment.html.erb
+++ b/app/views/welcome/payment.html.erb
@@ -5,7 +5,7 @@
 			<div class="col-sm-12">
 				<div class="payment-summary-intro">
 		      <h2><%= company[:full_name] %><br>Payment Options</h2>
-		      <p>See your individual invoice for direct electronic payment options. All payment options are summarized below:</p>
+		      <p>For electronic payments, please see your invidiual invoice email. All payment options are summarized below:</p>
 		      <hr>
 				</div>
 				<%= render 'invoices/payment-options' %>
