--- a/app/views/welcome/stripe.html.erb
+++ b/app/views/welcome/stripe.html.erb
@@ -27,6 +27,7 @@
 							<th>Date</th>
 							<th>Invoice ID</th>
 							<th class="text-right">Amount</th>
+							<th class="text-right">Est. Fee</th>
 						</tr>
 					</thead>
 					<tbody>
@@ -35,6 +36,7 @@
 							<td><%= Time.at(charge.created).strftime('%B %e, %Y') %></td>
 							<td><% if charge.metadata['invoice_id'] %><%= link_to invoice_path(charge.metadata['invoice_id']) do %><%= charge.metadata['invoice_id'] %><% end %><% else %>&mdash;<% end %></td>
 							<td class="text-right"><%= number_to_currency(charge.amount / 100) %></td>
+							<td class="text-right"><%= number_to_currency(((charge.amount * 0.029) + 30) / 100 * -1) %></td>
 						</tr>
 						<% end %>
 					</tbody>
