--- a/app/views/welcome/stripe.html.erb
+++ b/app/views/welcome/stripe.html.erb
@@ -15,7 +15,7 @@
 						<% @payouts['data'].each do |payout| %>
 						<tr>
 							<td><%= Time.at(payout.arrival_date).strftime('%B %e, %Y') %></td>
-							<td class="text-right" colspan="3"><%= number_to_currency(payout.amount / 100, precision: 2) %></td>
+							<td class="text-right" colspan="3"><%= number_to_currency(payout.amount.to_f / 100, precision: 2) %></td>
 						</tr>
 						<% end %>
 					</tbody>
@@ -35,8 +35,8 @@
 						<tr>
 							<td><%= Time.at(charge.created).strftime('%B %e, %Y') %></td>
 							<td><% if charge.metadata['invoice_id'] %><%= link_to invoice_path(charge.metadata['invoice_id']) do %><%= charge.metadata['invoice_id'] %><% end %><% else %>&mdash;<% end %></td>
-							<td class="text-right"><%= number_to_currency(charge.amount / 100, precision: 2) %></td>
-							<td class="text-right"><%= number_to_currency(((charge.amount * 0.029) + 30) / 100 * -1, precision: 2) %></td>
+							<td class="text-right"><%= number_to_currency(charge.amount.to_f / 100) %></td>
+							<td class="text-right"><%= number_to_currency(((charge.amount.to_f * 0.029) + 30) / 100 * -1, precision: 2) %></td>
 						</tr>
 						<% end %>
 					</tbody>
