--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -59,7 +59,7 @@ p.callout {
 ------------------------------------- */
 table.head-wrap { width: 100%;}
 
-.header.container table td.logo { padding: 15px; }
+.header.container table td.logo { padding: 30px 15px 15px; }
 .header.container table td.label { padding: 15px; padding-left:0px;}
 
 
